<resources>
    <string name="app_name">Formz Engine</string>
    <string name="action_settings">Settings</string>
    <string name="notification_settings">Notifications</string>
    <string name="fragment_form_title">Form Details</string>
    <!-- ****************** -->
    <!-- Dev Menu Values -->
    <!-- ****************** -->
    <string name="delete_db">Delete Database</string>
    <string name="reload_db">Reload Database</string>
    <string name="file_upload">Upload Sync</string>
    <string name="file_download">Download Sync</string>
    <string name="sync_files">Sync to Database</string>
    <string name="save_button">Save</string>
    <string name="update_button">Update</string>
    <string name="action_help">Help</string>
    <string name="api_test">Test API Connection</string>
    <!-- ****************** -->
    <!-- Form type Values -->
    <!-- ****************** -->
    <string name="form_type_complete">Complete</string>
    <string name="form_type_blank">Blank</string>
    <string name="form_field_type_text">text</string>
    <string name="form_field_type_select">select</string>
    <!-- ****************** -->
    <!-- Toast Values -->
    <!-- ****************** -->
    <string name="nav_logout">Logout</string>
    <string name="nav_sync_up">Syncing Up</string>
    <string name="nav_sync_down">Syncing Down</string>
    <string name="nav_api_test">Testing API Connection</string>
    <!-- ****************** -->
    <!-- Error Values -->
    <!-- ****************** -->
    <string name="error_syncing">An error has occurred. Please try again.</string>

    <!-- ****************** -->
    <!-- Preferences Values -->
    <!-- ****************** -->
    <!-- Preference Categories -->
    <string name="pref_category_notifications_key" translatable="false">notifications_category</string>
    <string name="pref_category_notifications_title">Notifications</string>
    <string name="pref_category_dev_key" translatable="false">dev_category</string>
    <string name="pref_category_dev_title">Development Options</string>
    <string name="pref_category_account_key" translatable="false">account_info_settings</string>
    <string name="pref_category_account_title">Mock Account Data</string>

    <!-- Notifications, don't need to translate keys -->
    <string name="pref_show_notification_key" translatable="false">show_notification</string>
    <string name="pref_show_notification_title">Turn on Notifications</string>
    <string name="pref_show_notification_true">Show Testing Notifications</string>
    <string name="pref_show_notification_false">Don\'t Show Testing Notifications</string>
    <!-- Dev or Debug toggle -->
    <string name="pref_show_debug_key" translatable="false">show_debug</string>
    <string name="pref_show_debug_title">Turn on Debug</string>
    <string name="pref_show_debug_true">Show Debug</string>
    <string name="pref_show_debug_false">Don\'t Show Debug</string>
    <!-- Mock Account Data Name -->
    <string name="pref_name_key" translatable="false">user_name</string>
    <string name="pref_name_title">Account Name</string>
    <string name="pref_name_dialog_title">User Name</string>
    <string name="pref_name_dialog_message">Enter Name for account testing</string>
    <string name="pref_name_default">John Smith</string>
    <!-- Mock Account Data Name -->
    <string name="pref_contact_key" translatable="false">contact_number</string>
    <string name="pref_contact_title">Contact Number</string>
    <string name="pref_contact_dialog_title">Contact Number</string>
    <string name="pref_contact_dialog_message">Enter number for account testing</string>
    <string name="pref_contact_default">867-5309 </string>
    <!-- Mock Account Data Gender -->
    <string name="pref_gender_key" translatable="false">user_gender</string>
    <string name="pref_gender_title">Gender</string>
    <string name="pref_gender_dialog_title">Gender</string>
    <string name="pref_gender_default_value">Test</string>
    <!-- Label for Gender Array -->
    <string name="pref_gender_male_label">Male</string>
    <string name="pref_gender_female_label">Female</string>
    <string name="pref_gender_other_label">Prefer not to say</string>
    <!-- Value for Gender Array -->
    <string name="pref_gender_male_value">0</string>
    <string name="pref_gender_female_value">1</string>
    <string name="pref_gender_other_value">2</string>
    <!-- Value for Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>






</resources>
