<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hemingwaywest.utiliserve.MainActivity"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="Account" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />
    </group>

    <item android:title="Dev Options">
        <menu>
            <item
                android:id="@+id/nav_action_file_upload"
                android:icon="@drawable/ic_file_upload_black_24dp"
                android:title="@string/file_upload" />
            <item
                android:id="@+id/nav_action_file_download"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/file_download" />
            <item
                android:id="@+id/nav_action_api_test"
                android:icon="@drawable/ic_cloud_done_black_24dp"
                android:title="@string/api_test" />
            <item
                android:id="@+id/nav_action_delete_db"
                android:icon="@drawable/ic_dns_black_24dp"
                android:title="@string/delete_db" />
            <item
                android:id="@+id/nav_action_reload_db"
                android:icon="@drawable/ic_dns_black_24dp"
                android:title="@string/reload_db" />
        </menu>
    </item>

</menu>
